--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body onresize="resize()">
+    <canvas id="background"></canvas>
     <div class="glass">
         <div class="content">
             <h1>Happy Holidays</h1>
@@ -14,4 +15,5 @@
     <canvas id="canvas"></canvas>
 </body>
 <script src="script.js"></script>
+<script src="script2.js"></script>
 </html>
