--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="glass">
         <div class="content">
             <h1>Happy Holidays</h1>
-            <p>We've made so many new memories this year, from jumping off of cliffs to spending time with each other. It's been such a lovely year, and we're looking forward to the next year.</p>
+            <p>We've made so many new memories this year, from jumping off of cliffs to spending time with each other. It's been such a lovely year, and we're looking forward to the next year. We wish you happy holidays and a happy New Year!</p>
             <h3>With regards,<br>The Choi-Kim Family</h3>
         </div>
     </div>
